fixed mobile view alignment for h1 text

--- a/main.css
+++ b/main.css
@@ -399,10 +399,12 @@ nav .fas {
    .header-text {
     margin-top: 100%;
     font-size: 16px;
+   
    }
    .header-text h1 {
     font-size: 30px;
     margin-top: 5px;
+    padding-left: 4px;
 
    }
 
